[package]
name = "rust-keyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
subtle = "2.5"
thiserror = "1.0"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

rand_core = "0.6"
aead = "0.5"

rand_chacha = "0.3"

[dev-dependencies]
hex = "0.4"
tempfile = "3.0"

[features]
default = []
#unstable = []
#hardware = []