[package]
name = "rust-keyvault"
version = "0.1.0"
edition = "2021"
authors = ["Blessed Tosin-Oyinbo <tosinoyinboblessed@gmail.com>"] 
license = "MIT OR Apache-2.0"
description = "A secure, modern cryptographic key management library for Rust"
documentation = "https://docs.rs/rust-keyvault"
repository = "https://github.com/0xTnxl/rust-keyvault" 
keywords = ["cryptography", "key-management", "security", "encryption", "aead"]
categories = ["cryptography", "authentication"]
readme = "README.md"
exclude = ["target/", ".git/", "*.swp", "*.swo"]

[dependencies]
# Core crypto
aead = "0.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10" 
argon2 = "0.5"
sha2 = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
hkdf = "0.12"
hmac = "0.12"

# Compression
flate2 = "1.0"

# Random generation
rand_core = "0.6"
rand_chacha = "0.3"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
base64 = "0.21"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
hex = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "key_operations"
harness = false

[[bench]]
name = "storage_operations"
harness = false

[[bench]]
name = "export_import"
harness = false

[[bench]]
name = "backup_restore"
harness = false

[features]
default = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
